@@ -4,13 +4,14 @@ zeit.content.cp changes
 0.43.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Bugfix: Raw-Modul im Aufmacher bekommt kein Layout mehr zugewiesen, das kann
+  nämlich nicht funktionieren (#8844).
 
 
 0.43.0 (2011-03-23)
 -------------------
 
-- TeaserBockProxy adapts to ICommonMetadata now. 
+- TeaserBockProxy adapts to ICommonMetadata now.
 
 - Freie Teaser werden jetzt nur noch in der CP gespeichert. Es gibt keine extra
   Objekte im DAV mehr dafür (#7826)
